# openapi/v1.json
@@ -1251,10 +1251,6 @@
               }
             ]
           },
-          "expiresAt": {
-            "format": "date-time",
-            "type": "string"
-          },
           "id": {
             "format": "guid",
             "type": "string"
@@ -1298,13 +1294,11 @@
         "description": "",
         "enum": [
           "Held",
-          "Stale",
           "Ended"
         ],
         "type": "string",
         "x-enumNames": [
           "Held",
-          "Stale",
           "Ended"
         ]
       },
